# AgentDisruptBench

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DATASHEET.md  Dockerfile  LICENSE  Makefile  README.md  croissant.json  pr8_issue_comments.json  pr8_new.json  pr8_review_comments.json  pyproject.toml  rac_out.txt
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
config/: benchmark.yaml  benchmark_special.yaml
config/llm/: gemini-2.5-flash.yaml  gemini-3-flash.yaml  gpt-4o-mini.yaml  gpt-4o.yaml  gpt-5-mini.yaml
config/tasks/: full_task_suite.yaml
evaluation/: __init__.py  base_runner.py  compare_runs.py  config_loader.py  dashboard.py  llm_factory.py  orchestrator.py  run_base_quick.py  run_benchmark.py  run_logger.py  run_multi_benchmark.py  run_rac_quick.py  runners  show_run.py
evaluation/_archive/: base_runner.py  run_base_quick.py  run_multi_benchmark.py  run_rac_quick.py
evaluation/clients/: langchain_rest_client.py
evaluation/runners/: __init__.py  langchain_runner.py  openai_runner.py  rac_runner.py  simple_runner.py
examples/: quickstart.py
examples/langgraph_fault_tolerance/: README.md  agent_http.py  run_external_benchmark.py
legacy_traces/evaluation_results/: report.md  results.json  summary.json
legacy_traces/results/: report.md  results.csv  results.json  summary.json
paper/: ED_TRACK_GUIDELINES.md
paper/tables/: metrics_all_tasks.csv  table_overall_success.tex  table_per_domain.tex  table_recovery_metrics.tex
plans/: agentdisruptbench-full-implementation-2026-03-09-1408-complete.md  benchmark_design.md  evaluation-runners-2026-03-09-1503-complete.md
python/agentdisruptbench/: __init__.py  cli.py
runs/20260331_073153_simple_gpt4o_retail_001/: report.md  results.csv  results.json  run_log.jsonl  summary.json
runs/20260331_074419_langchain_gemini25flash_adversarial_retail_001_adversarial_retail_002/: report.md  results.csv  results.json  (+2 more)
scripts/: export_csv.py  generate_figures.py  generate_tables.py  hf_dataset_card.md  populate_croissant_hashes.py  run_baselines.sh  run_rac_baselines.sh  upload_hf_dataset.sh
tests/: test_compare_runs.py  test_config_loader.py  test_engine.py  test_integration.py  test_llm_factory.py  test_p1.py  test_run_multi_benchmark.py  test_state.py
(+727 files in other folders)
